[project]
name = "loom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.260.0",
    "boto3-stubs>=1.43.36",
    "boto3[stubs,stubs-full]>=1.43.36",
    "boto3",
    "constructs>=10.6.0",
    "pydantic>=2.13.4",
    "pyrefly>=0.60.0",
    "boto3-stubs-full>=1.43.36",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
